# rusty-space

./: .gitignore  Cargo.toml  README.md
assets/templates/: beads.yml  blank.yml  flat_kepler.yml  hex_rosette.yml  klemperer_rhombus.yml  ringworld.yml  simple.yml  test.yml
docs/: archetypes.md
docs/crash/: monitor_removed.txt
saves/: First Test.yml  Little Ring.yml  fleet_of_worlds.yml
src/: lib.rs  main.rs
src/body/: appearance.rs  body.rs  circular.rs  fixed.rs  kepler.rs  linear.rs  mod.rs  motive.rs  newton.rs  solar_system.rs  universe.rs
src/body/appearance/: mod.rs
src/body/motive/: calculate_body_positions.rs  compound_motive.rs  fixed.rs  fixed_motive.rs  flat_kepler.rs  info.rs  kepler_motive.rs  linear.rs  mass.rs  mod.rs  newton_motive.rs  stupid_circle.rs
src/body/universe/: migrations.rs  mod.rs  save.rs  save_sqlite.rs  solar_system.rs
src/foundations/: gravity.rs  kepler.rs  mod.rs
src/foundations/reference_frame/: conversions.rs  mod.rs  observation.rs  transformation.rs
src/foundations/time/: jd.rs  limits.py  mod.rs
src/gui/: app.rs  common.rs  horizons.rs  mod.rs  post_process.rs  settings.rs  splash.rs
src/gui/body/: engine.rs  graphical.rs  mod.rs
src/gui/editor/: display.rs  editor.rs  gui.rs  mod.rs
src/gui/menu/: common.rs  main.rs  mod.rs  save_load.rs  save_select.rs  settings.rs  settings_display.rs  settings_sound.rs  settings_ui_test.rs
src/gui/planetarium/: body_edit.rs  controls.rs  display.rs  gui.rs  mod.rs  planetarium.rs  spin.rs  time.rs
src/gui/planetarium/camera/: mod.rs
src/gui/planetarium/gizmoids/: trajectory.rs
src/gui/planetarium/windows/: body_edit.rs  body_info.rs  camera.rs  controls.rs  mod.rs  settings.rs  spin.rs
src/gui/util/: debug.rs  freecam.rs  mod.rs
src/interop/: horizons.rs  mod.rs
src/util/: bevystuff.rs  bitfutz.rs  bitfutzery.rs  circular.rs  common.rs  conics.rs  ease.rs  format.rs  gravity.rs  jd.rs  kepler.rs  mappings.rs  minkowski.rs  mod.rs  overlapping_chunks.rs  patched_conics.rs  time_map.rs
wix/: License.rtf  main.wxs
