[package]
name = "exotic-matters"
version = "0.1.0"
edition = "2021"
description = "The plotting and trajectory tool for the TTRPG Exotic Matters"
license = "MIT"
authors = ["Alexader Lowry <zander@zanderlowry.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
nalgebra = "0.32.5"
glam = { version = "0.27.0", features = ["serde"] }
num-traits = "0.2.18"
bevy = "0.13.2"
once_cell = "1.19.0"
image = "0.25.1"
winit = "0.29.15"
bevy-trait-query = "0.5.1"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
serde_yaml = "0.9.33"
bevy_common_assets = { version = "0.10.0", features = ["yaml", "toml"] }
scilib = "1.0.0"
