[package]
name = "exotic-matters"
version = "0.1.0"
edition = "2021"
description = "The plotting and trajectory tool for the TTRPG Exotic Matters"
license = "MIT"
authors = ["Alexader Lowry <zander@zanderlowry.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[dependencies]
num-traits = "0.2.18"
scilib = "1.0.0"

bevy = "0.15.3"
bevy_egui = "0.33.0"
iyes_perf_ui = "0.4.0"
serde = { version = "1.0.215", features = ["derive"] }
toml = "0.8.20"
uuid = { version = "1.12.1", features = ["v4"] }
lazy_static = "1.4.0"
regex = "1.10.3"
