[package]
name = "exotic-matters"
version = "0.1.0"
edition = "2024"
description = "The plotting and trajectory tool for the TTRPG Exotic Matters"
license = "MIT"
authors = ["Alexader Lowry <zander@zanderlowry.com"]
default-run = "exotic-matters"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[dependencies]
num-traits = "0.2.18"
scilib = "1.0.0"

bevy = "0.16.1"
bevy_egui = "0.35.0"
iyes_perf_ui = "0.5.0"
serde = { version = "1.0.215", features = ["derive"] }
toml = "0.8.20"
uuid = { version = "1.12.1", features = ["v4"] }
lazy_static = "1.4.0"
regex = "1.10.3"
url = "2.5.4"
http = "1.3.1"
reqwest = { version = "0.12", features = ["blocking"] }
itertools = "0.14.0"

[dependencies.eframe]
version = "0.26.0"
features = [
    "persistence", # Enable saving app state persistence
]

eframe = "0.32.0"
url = "2.5.4"

# Top-level Cargo.toml
[profile.dev.package.objc2]
debug-assertions = false

[[bin]]
name = "exotic-matters"
path = "src/bin/exotic_matters.rs"

[[bin]]
name = "horizons"
path = "src/bin/horizons.rs"
